--- a/waybar/config
+++ b/waybar/config
@@ -3,13 +3,13 @@
     "output": ["DP-3", "HDMI-A-1"],
     "modules-left": ["mpd", "sway/mode", "custom/right-arrow"],
     "modules-center": ["custom/right-arrow", "sway/workspaces", "custom/left-arrow"],
-    "modules-right": ["custom/left-arrow", "backlight", "pulseaudio", "custom/swaync", "clock"],
+    "modules-right": ["custom/left-arrow", "backlight", "wireplumber", "custom/swaync", "clock"],
     "include": ["~/.config/waybar/config.d/common.json"]
 },{
     "height": 18, // Waybar height (to be removed for auto height)
     "modules-left": ["mpd", "sway/mode", "custom/right-arrow"],
     "modules-center": ["custom/right-arrow", "sway/workspaces", "custom/left-arrow"],
-    "modules-right": ["custom/left-arrow", "tray", "backlight", "pulseaudio", "custom/swaync", "clock"],
+    "modules-right": ["custom/left-arrow", "tray", "backlight", "wireplumber", "custom/swaync", "clock"],
     "output": ["DP-2"],
     "include": ["~/.config/waybar/config.d/common.json"]
 }]
