--- a/waybar/install.conf
+++ b/waybar/install.conf
@@ -1,3 +1,4 @@
 "style.css": "~/.config/waybar/style.css"
 "config": "~/.config/waybar/config"
+"config_hyprland": "~/.config/waybar/config_hyprland"
 "config.d/common.json": "~/.config/waybar/config.d/common.json"
