--- a/swaync/config.json
+++ b/swaync/config.json
@@ -15,5 +15,11 @@
   "transition-time": 200,
   "hide-on-clear": false,
   "hide-on-action": true,
-  "script-fail-notify": true
+  "script-fail-notify": true,
+  "notification-visibility": {
+    "network-manager": {
+      "app-name": "NetworkManager Applet",
+      "state": "transient"
+    }
+  }
 }
