hyprland: tweaks for laptop
Disable drop-shadows, slow on intel GPUs.

--- a/hypr/conf.d/global.conf
+++ b/hypr/conf.d/global.conf
@@ -41,7 +41,7 @@ decoration {
     blur_passes = 1
     blur_new_optimizations = on
 
-    drop_shadow = yes
+    drop_shadow = no
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
