--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,7 +26,7 @@ source=~/.config/hypr/conf.d/scratchpad.conf
 # Start applications
 bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, r, exec, wofi -S drun --allow-images
-bind = L_ALT, z, exec, firefox
+bind = L_ALT, z, exec, firefox-beta
 bind = L_ALT, x, exec, thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
