--- a/hypr/conf.d/workspaces.conf
+++ b/hypr/conf.d/workspaces.conf
@@ -11,9 +11,9 @@ $ws10 = 8
 $ws11 = 9
 $ws12 = 10
 
-workspace=1,monitor:DP-2,default:"true"
-workspace=2,monitor:HDMI-A-1,default:"true"
-workspace=3,monitor:DP-2,default:"true"
+workspace=1,monitor:DP-2,default:true
+workspace=2,monitor:HDMI-A-1,default:true
+workspace=3,monitor:DP-2,default:true
 
 exec = hyprctl dispatch renameworkspace 1 $ws1
 exec = hyprctl dispatch renameworkspace 2 $ws2
