hyprland: add binding for fullscreen and small fix

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -50,6 +50,8 @@ bind = $mainMod_L_CONTROL, p, pseudo,
 
 # Float
 bind = $mainMod_L_CONTROL, f, togglefloating,
+# Fullscreen
+bind = $mainMod_SHIFT_L_CONTROL, f, fullscreen,
 
 # Move around
 bind = $mainMod, h, movefocus, l
