--- a/hypr/conf.d/global.conf
+++ b/hypr/conf.d/global.conf
@@ -49,7 +49,7 @@ decoration {
 
 misc {
     vrr = 1
-    no_direct_scanout = 0
+    no_direct_scanout = no
     disable_hyprland_logo = yes
     disable_splash_rendering = yes
     mouse_move_focuses_monitor = no
