hyprland: tweak for laptop

--- a/hypr/conf.d/global.conf
+++ b/hypr/conf.d/global.conf
@@ -30,7 +30,7 @@ animations {
     animation = border, 1, 3, default
     animation = fade, 1, 3, smoothIn
     animation = fadeDim, 1, 3, smoothIn
-    animation = workspaces, 1, 3, default, slide
+    animation = workspaces, 1, 4, default, slide
     animation = specialWorkspace, 0, 1, default, slidevert
 }
 
@@ -39,7 +39,7 @@ decoration {
     blur = yes
     blur_size = 3
     blur_passes = 1
-    blur_new_optimizations = on
+    blur_new_optimizations = yes
 
     drop_shadow = no
     shadow_range = 4
@@ -48,8 +48,9 @@ decoration {
 }
 
 misc {
-    vrr = 1
-    no_direct_scanout = 0
+    vrr = 2
+    vfr = 1
+    no_direct_scanout = no
     disable_hyprland_logo = yes
     disable_splash_rendering = yes
     mouse_move_focuses_monitor = no
