--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,6 +2,7 @@ exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURR
 exec-once = hash dbus-update-activation-environment 2>/dev/null && dbus-update-activation-environment --systemd DISPLAY  WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland XDG_SESSION_TYPE=wayland
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
+monitor=eDP-1,1920x1200@60,0x0,1
 monitor=,preferred,auto,auto
 
 # Some default env vars.
@@ -31,5 +32,9 @@ bind = L_ALT, x, exec, thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
 exec-once = swaybg -o \* -m fill -i ~/.config/hypr/wallpaper
-exec-once = swayidle -w lock '~/.config/hypr/lock.sh'
+exec-once = swayidle -w \
+    timeout 300 '~/.config/hypr/lock.sh' \
+    after-resume 'hyprctl dispatcher dpms on' \
+    lock '~/.config/hypr/lock.sh' \
+    before-sleep '~/.config/hypr/lock.sh'
 exec-once = ~/.config/hypr/start.sh
