hyprland: move some packages to flatpak
Remove the number of local dependencies, allow to easily sync the
versions between distros.

--- a/hypr/conf.d/scratchpad.conf
+++ b/hypr/conf.d/scratchpad.conf
@@ -7,7 +7,7 @@ bind = L_SHIFT_L_ALT, d, movetoworkspace, special:temp
 bind = L_SHIFT_L_ALT, d, workspace, special:temp
 bind=L_ALT, a, submap, scratchpad
 submap = scratchpad
-bind = L_ALT, k, exec, ~/.config/hypr/scratchpad.sh 'keepassxc' --name keepassxc
+bind = L_ALT, k, exec, ~/.config/hypr/scratchpad.sh 'flatpak run org.keepassxc.KeePassXC' --name keepassxc
 bind = L_ALT, k, submap, reset
 bind = L_SHIFT_L_ALT, k, movetoworkspace, special:keepassxc
 bind = L_SHIFT_L_ALT, k, submap, reset
