--- a/weechat/weechat/alias.conf
+++ b/weechat/weechat/alias.conf
@@ -6,50 +6,52 @@
 #
 # Use commands like /set or /fset to change settings in WeeChat.
 #
-# For more info, see: https://weechat.org/doc/quickstart/
+# For more info, see: https://weechat.org/doc/weechat/quickstart/
 #
 
+config_version = 2
+
 [cmd]
-AAWAY = "allserv /away"
-AME = "allchan /me"
-AMSG = "allchan /msg *"
-ANICK = "allserv /nick"
+aaway = "allserv /away"
+ame = "allchan /me"
+amsg = "allchan /msg *"
+anick = "allserv /nick"
 b = "buffer"
-BEEP = "print -stderr \a"
+beep = "print -stderr \a"
 bnlp = "/say bonne nuit, lege paswap"
-BYE = "quit"
-C = "buffer clear"
-CHAT = "dcc chat"
-CL = "buffer clear"
-CLOSE = "buffer close"
-EXIT = "quit"
-IG = "ignore"
-J = "join"
-K = "kick"
-KB = "kickban"
-LEAVE = "part"
-M = "msg"
-MUB = "unban *"
-N = "names"
-Q = "query"
-REDRAW = "window refresh"
-SAY = "msg *"
+bye = "quit"
+c = "buffer clear"
+chat = "dcc chat"
+cl = "buffer clear"
+close = "buffer close"
+exit = "quit"
+ig = "ignore"
+j = "join"
+k = "kick"
+kb = "kickban"
+leave = "part"
+m = "msg"
+mub = "unban *"
+n = "names"
+q = "query"
+redraw = "window refresh"
+say = "msg *"
 serv_sfilter = "filter add irc_smart_$server irc.$server.* irc_smart_filter *"
 sfilter = "filter add irc_smart_$server_$channel irc.$server.$channel irc_smart_filter *"
-SIGNOFF = "quit"
+signoff = "quit"
 split = "/window splitv"
 split21 = "/window splitv; /window left; /window splith"
 splith = "/window splith"
 splitv = "/window splitv"
-T = "topic"
-UB = "unban"
-UMODE = "mode $nick"
-V = "command core version"
-W = "who"
-WC = "window merge"
-WI = "whois"
-WII = "whois $1 $1"
-WW = "whowas"
+t = "topic"
+ub = "unban"
+umode = "mode $nick"
+v = "command core version"
+w = "who"
+wc = "window merge"
+wi = "whois"
+wii = "whois $1 $1"
+ww = "whowas"
 znc = "quote znc"
 
 [completion]
