hyprland: add navigation bindings

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -59,6 +59,14 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
+# Cycle between windows
+bind = $mainMod, Tab, cyclenext,
+bind = $mainMod, Tab, bringactivetotop,
+bind = $mainMod_SHIFT, Tab, cyclenext, prev
+bind = $mainMod_SHIFT, Tab, bringactivetotop,
+bind = ALT, Tab, focuscurrentorlast,
+bind = ALT, Tab, bringactivetotop,
+
 # Move to screen
 bind = $mainMod, q, focusmonitor, HDMI-A-1
 bind = $mainMod_SHIFT, q, movewindow, mon:HDMI-A-1
