--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,9 +32,5 @@ bind = L_ALT, x, exec, thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
 exec-once = swaybg -o \* -m fill -i ~/.config/hypr/wallpaper
-exec-once = swayidle -w \
-    timeout 300 '~/.config/hypr/lock.sh' \
-    after-resume 'hyprctl dispatcher dpms on' \
-    lock '~/.config/hypr/lock.sh' \
-    before-sleep '~/.config/hypr/lock.sh'
+exec-once = swayidle -w timeout 300 '~/.config/hypr/lock.sh' after-resume 'hyprctl dispatcher dpms on' lock '~/.config/hypr/lock.sh' before-sleep '~/.config/hypr/lock.sh'
 exec-once = ~/.config/hypr/start.sh
