hyprland: add spotify in scratchpad

--- a/hypr/conf.d/scratchpad.conf
+++ b/hypr/conf.d/scratchpad.conf
@@ -11,6 +11,10 @@ bind = L_ALT, k, exec, ~/.config/hypr/scratchpad.sh 'flatpak run org.keepassxc.K
 bind = L_ALT, k, submap, reset
 bind = L_SHIFT_L_ALT, k, movetoworkspace, special:keepassxc
 bind = L_SHIFT_L_ALT, k, submap, reset
+bind = L_ALT, s, exec, ~/.config/hypr/scratchpad.sh 'flatpak run com.spotify.Client' --name spotify
+bind = L_ALT, s, submap, reset
+bind = L_SHIFT_L_ALT, s, movetoworkspace, special:spotify
+bind = L_SHIFT_L_ALT, s, submap, reset
 bind = , Return, submap, reset
 bind = , Escape, submap, reset
 submap = reset
