hyprland/sway: cleanup systemd import env

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland XDG_SESSION_TYPE=wayland
+exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_SESSION_TYPE=wayland
 exec-once = hash dbus-update-activation-environment 2>/dev/null && dbus-update-activation-environment --systemd DISPLAY  WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland XDG_SESSION_TYPE=wayland
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
