hypr: fix lock binding

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -2,7 +2,7 @@
 bind = $mainMod_SHIFT, m, exit,
 
 # Lock
-bind = $mainMod_L_CONTROL, l, exec, loginctl lock-session
+bind = $mainMod_L_CONTROL_SHIFT, l, exec, loginctl lock-session
 
 # Ignore bindings
 bind = $mainMod_L_CONTROL, i, submap, ignore
