Hyrland: move all scripts in a specific dir

--- a/hypr/conf.d/scratchpad.conf
+++ b/hypr/conf.d/scratchpad.conf
@@ -1,17 +1,17 @@
-bind = L_ALT, s, exec, ~/.config/hypr/scratchpad.sh 'flatpak run org.signal.Signal' --name signal
+bind = L_ALT, s, exec, $scripts/scratchpad 'flatpak run org.signal.Signal' --name signal
 bind = L_SHIFT_L_ALT, s, movetoworkspace, special:signal
-bind = L_ALT, f, exec, ~/.config/hypr/scratchpad.sh 'flatpak run org.telegram.desktop' --name telegram
+bind = L_ALT, f, exec, $scripts/scratchpad 'flatpak run org.telegram.desktop' --name telegram
 bind = L_SHIFT_L_ALT, f, movetoworkspace, special:telegram
 bind = L_ALT, d, togglespecialworkspace, temp
 bind = L_SHIFT_L_ALT, d, movetoworkspace, special:temp
 bind = L_SHIFT_L_ALT, d, workspace, special:temp
 bind=L_ALT, a, submap, scratchpad
 submap = scratchpad
-bind = L_ALT, k, exec, ~/.config/hypr/scratchpad.sh 'flatpak run org.keepassxc.KeePassXC' --name keepassxc
+bind = L_ALT, k, exec, $scripts/scratchpad 'flatpak run org.keepassxc.KeePassXC' --name keepassxc
 bind = L_ALT, k, submap, reset
 bind = L_SHIFT_L_ALT, k, movetoworkspace, special:keepassxc
 bind = L_SHIFT_L_ALT, k, submap, reset
-bind = L_ALT, s, exec, ~/.config/hypr/scratchpad.sh 'flatpak run com.spotify.Client' --name spotify
+bind = L_ALT, s, exec, $scripts/scratchpad 'flatpak run com.spotify.Client' --name spotify
 bind = L_ALT, s, submap, reset
 bind = L_SHIFT_L_ALT, s, movetoworkspace, special:spotify
 bind = L_SHIFT_L_ALT, s, submap, reset
