--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,6 +7,7 @@ monitor=,preferred,auto,auto
 # Some default env vars.
 env = XCURSOR_SIZE,24
 $mainMod = SUPER
+$scripts = ~/.config/hypr/scripts
 
 # Defines the input and gestures block.
 source=~/.config/hypr/conf.d/input.conf
@@ -31,5 +32,5 @@ bind = L_ALT, x, exec, thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
 exec-once = swaybg -o \* -m fill -i ~/.config/hypr/wallpaper
-exec-once = swayidle -w lock '~/.config/hypr/lock.sh'
-exec-once = ~/.config/hypr/start.sh
+exec-once = swayidle -w lock $scripts/lock
+exec-once = $scripts/start
