--- a/hypr/install.conf
+++ b/hypr/install.conf
@@ -1,6 +1,4 @@
 "hyprland.conf": "~/.config/hypr/hyprland.conf"
 "conf.d": "~/.config/hypr/conf.d"
+"scripts": "~/.config/hypr/scripts"
 "wallpaper": "~/.config/hypr/wallpaper"
-"lock.sh": "~/.config/hypr/lock.sh"
-"start.sh": "~/.config/hypr/start.sh"
-"scratchpad.sh": "~/.config/hypr/scratchpad.sh"
