hyprland: add binding to toggle secondary screens

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -4,6 +4,12 @@ bind = $mainMod_SHIFT, m, exit,
 # Lock
 bind = $mainMod_L_CONTROL_SHIFT, l, exec, loginctl lock-session
 
+# Toggle secondary screens
+bind = $mainMod_SHIFT, F12, dpms, off DP-3
+bind = $mainMod_SHIFT, F12, dpms, off HDMI-A-1
+bind = $mainMod, F12, dpms, on DP-3
+bind = $mainMod, F12, dpms, on HDMI-A-1
+
 # Ignore bindings
 bind = $mainMod_L_CONTROL, i, submap, ignore
 submap = ignore
