gtk4: add settings.ini

--- a/gtk/install.conf
+++ b/gtk/install.conf
@@ -1,2 +1,3 @@
+"gtk4-settings.ini": "~/.config/gtk-4.0/settings.ini"
 "gtk3-settings.ini": "~/.config/gtk-3.0/settings.ini"
 "gtkrc-2.0": "~/.gtkrc-2.0"
