weechat: version update

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -466,6 +466,8 @@ default.window = "4;2;0;0;core;weechat"
 default.window = "5;1;0;0;irc;znc-freenode.#river"
 default.current = on
 
+[buffer]
+
 [notify]
 
 [filter]
@@ -744,6 +746,10 @@ up = "/cursor move up"
 @chat(fset.fset):button2* = "hsignal:fset_mouse"
 @chat(fset.fset):wheeldown = "/fset -down 5"
 @chat(fset.fset):wheelup = "/fset -up 5"
+@chat(irc.list_*):button1 = "/window ${_window_number};/list -go ${_chat_line_y}"
+@chat(irc.list_*):button2* = "hsignal:irc_list_mouse"
+@chat(irc.list_*):wheeldown = "/list -down 5"
+@chat(irc.list_*):wheelup = "/list -up 5"
 @chat(perl.iset):button1 = "hsignal:iset_mouse"
 @chat(perl.iset):button2* = "hsignal:iset_mouse"
 @chat(perl.iset):wheeldown = "/repeat 5 /iset **down"
@@ -774,3 +780,7 @@ up = "/cursor move up"
 @item(buflist2):button2* = "hsignal:buflist_mouse"
 @item(buflist3):button1* = "hsignal:buflist_mouse"
 @item(buflist3):button2* = "hsignal:buflist_mouse"
+@item(buflist4):button1* = "hsignal:buflist_mouse"
+@item(buflist4):button2* = "hsignal:buflist_mouse"
+@item(buflist5):button1* = "hsignal:buflist_mouse"
+@item(buflist5):button2* = "hsignal:buflist_mouse"
