hyprland: handle multi-GPU

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,6 +1,8 @@
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
 exec-once = hash dbus-update-activation-environment 2>/dev/null && dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE
 
+env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
+
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,1920x1200@60,0x0,1
 monitor=,preferred,auto,auto
