hyprland/sway: switch to foot by default

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,7 +25,7 @@ source=~/.config/hypr/conf.d/workspaces.conf
 source=~/.config/hypr/conf.d/scratchpad.conf
 
 # Start applications
-bind = $mainMod, Return, exec, alacritty
+bind = $mainMod, Return, exec, foot
 bind = $mainMod, r, exec, wofi -S drun --allow-images
 bind = L_ALT, z, exec, firefox
 bind = L_ALT, x, exec, thunderbird
