--- a/swaync/config.json
+++ b/swaync/config.json
@@ -1,5 +1,6 @@
 {
-  "$schema": "~/.config/swaync/configSchema.json",
+  "$schema": "/etc/xdg/swaync/configSchema.json",
+  "widgets": ["title", "dnd", "notifications", "mpris", "volume"],
   "positionX": "right",
   "positionY": "top",
   "control-center-margin-top": 0,
@@ -11,7 +12,7 @@
   "timeout-critical": 0,
   "notification-window-width": 500,
   "keyboard-shortcuts": true,
-  "image-visibility": "always",
+  "image-visibility": "when-available",
   "transition-time": 200,
   "hide-on-clear": false,
   "hide-on-action": true,
@@ -20,6 +21,32 @@
     "network-manager": {
       "app-name": "NetworkManager Applet",
       "state": "transient"
+    }
+  },
+  "widget-config": {
+    "dnd": {
+      "text": "Do Not Disturb"
+    },
+    "inhibitors": {
+      "text": "Inhibitors",
+      "button-text": "Clear All",
+      "clear-all-button": true
+    },
+    "label": {
+      "max-lines": 5,
+      "text": "Label Text"
+    },
+    "mpris": {
+      "image-size": 64,
+      "image-radius": 12
+    },
+    "title": {
+      "text": "Notifications",
+      "clear-all-button": false,
+      "button-text": "Clear All"
+    },
+    "volume": {
+      "label": "󰕾"
     }
   }
 }
