hyprland: add a binding to show the window title

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -85,10 +85,6 @@ bind = $mainMod_SHIFT, l, movewindow, r
 bind = $mainMod_SHIFT, k, movewindow, u
 bind = $mainMod_SHIFT, j, movewindow, d
 
-# Manage split
-# Change split orientation
-bind = $mainMod, b, togglesplit,
-
 # Split ratio
 bind = $mainMod_L_CONTROL, 1, splitratio, exact 0.2
 bind = $mainMod_L_CONTROL, 2, splitratio, exact 0.4
@@ -107,6 +103,9 @@ bind = $mainMod_L_CONTROL, k, exec, hyprctl dispatch layoutmsg "preselect u" > /
 bind = $mainMod_L_CONTROL, j, exec, hyprctl dispatch layoutmsg "preselect d" > /dev/null
 # Resets the preselection
 bind = $mainMod_L_CONTROL, Space, exec, hyprctl dispatch layoutmsg "preselect ''" > /dev/null
+
+# Change split orientation
+bind = $mainMod, b, togglesplit,
 
 # Resize
 bind = $mainMod_ALT, h, resizeactive, -50 0
@@ -133,3 +132,6 @@ submap = reset
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Show the title of the current window
+bind = $mainMod, t, exec, hyprctl notify -1 5000 -1 `hyprctl activewindow -j | jq -r .title`
