hyprland: changes for new 4K screen
Uses hypridle to dpms the screens after 10min.
Changes outputs.
Enable wayland in electron when possible.
Disable VRR as it flickers on OLED.

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -72,12 +72,12 @@ bind = ALT, Tab, focuscurrentorlast,
 bind = ALT, Tab, bringactivetotop,
 
 # Move to screen
-bind = $mainMod, q, focusmonitor, HDMI-A-1
-bind = $mainMod_SHIFT, q, movewindow, mon:HDMI-A-1
+bind = $mainMod, q, focusmonitor, DP-3
+bind = $mainMod_SHIFT, q, movewindow, mon:DP-3
 bind = $mainMod, w, focusmonitor, DP-2
 bind = $mainMod_SHIFT, w, movewindow, mon:DP-2
-bind = $mainMod, e, focusmonitor, DP-3
-bind = $mainMod_SHIFT, e, movewindow, mon:DP-3
+bind = $mainMod, e, focusmonitor, HDMI-A-1
+bind = $mainMod_SHIFT, e, movewindow, mon:HDMI-A-1
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod_SHIFT, h, movewindow, l
@@ -117,7 +117,7 @@ bind = $mainMod_ALT_SHIFT, k, resizeactive, 0 -100
 bind = $mainMod_ALT, j, resizeactive, 0 50
 bind = $mainMod_ALT_SHIFT, j, resizeactive, 0 100
 # will switch to a submap called resize
-###
+#
 bind=$mainMod_L_CONTROL,R,submap,resize
 submap = resize
 binde = , h, resizeactive, -50 0
@@ -127,7 +127,7 @@ binde = , j, resizeactive, 0 50
 bind = , Return, submap, reset
 bind = , Escape, submap, reset
 submap = reset
-###
+#
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
