--- a/hypr/conf.d/scratchpad.conf
+++ b/hypr/conf.d/scratchpad.conf
@@ -1,6 +1,6 @@
-bind = L_ALT, s, exec, $scripts/scratchpad 'flatpak run org.signal.Signal' --name signal
+bind = L_ALT, s, exec, $scripts/scratchpad 'flatpak run org.signal.Signal \--enable-features=UseOzonePlatform \--ozone-platform=wayland' --name signal
 bind = L_SHIFT_L_ALT, s, movetoworkspace, special:signal
-bind = L_ALT, f, exec, $scripts/scratchpad 'flatpak run org.telegram.desktop' --name telegram
+bind = L_ALT, f, exec, $scripts/scratchpad 'flatpak run org.telegram.desktop \--enable-features=UseOzonePlatform \--ozone-platform=wayland' --name telegram
 bind = L_SHIFT_L_ALT, f, movetoworkspace, special:telegram
 bind = L_ALT, d, togglespecialworkspace, temp
 bind = L_SHIFT_L_ALT, d, movetoworkspace, special:temp
