--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,5 +32,6 @@ bind = L_ALT, x, exec, thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
 exec-once = swaybg -o \* -m fill -i ~/.config/hypr/wallpaper
-exec-once = swayidle -w lock $scripts/lock
+exec-once = swaybg -o HDMI-A-1 -c \#d4a35a
+exec-once = hypridle
 exec-once = $scripts/start
