--- a/hypr/conf.d/global.conf
+++ b/hypr/conf.d/global.conf
@@ -28,6 +28,7 @@ animations {
     animation = windowsOut, 1, 3, smoothOut, slide
     animation = windowsMove, 1, 3, default, slide
     animation = border, 1, 3, default
+    animation = layersIn, 0, 3, default, fade
     animation = fade, 1, 3, smoothIn
     animation = fadeDim, 1, 3, smoothIn
     animation = workspaces, 1, 3, default, slide
@@ -46,7 +47,8 @@ decoration {
 }
 
 misc {
-    vrr = 2
+    # Buggy on OLED screen, creates flicker on Firefox fullscreen.
+    vrr = 0
     disable_hyprland_logo = yes
     disable_splash_rendering = yes
     mouse_move_focuses_monitor = no
