--- a/swaync/config.json
+++ b/swaync/config.json
@@ -14,8 +14,8 @@
   "keyboard-shortcuts": true,
   "image-visibility": "when-available",
   "transition-time": 200,
-  "hide-on-clear": false,
-  "hide-on-action": true,
+  "hide-on-clear": true,
+  "hide-on-action": false,
   "script-fail-notify": true,
   "notification-visibility": {
     "network-manager": {
