hyprland: add fake fullscreen binding

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -56,6 +56,8 @@ bind = $mainMod_L_CONTROL, p, pseudo,
 bind = $mainMod_L_CONTROL, f, togglefloating,
 # Fullscreen
 bind = $mainMod_SHIFT_L_CONTROL, f, fullscreen,
+# Fake fullscreen
+bind = $mainMod_ALT, f, fullscreen, 2
 
 # Move around
 bind = $mainMod, h, movefocus, l
