hyprland: switch to hypridle

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,5 +35,5 @@ bind = L_ALT, x, exec, thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
 exec-once = swaybg -o \* -m fill -i ~/.config/hypr/wallpaper
-exec-once = swayidle -w timeout 300 $scripts/lock after-resume 'hyprctl dispatcher dpms on' lock $scripts/lock before-sleep $scripts/lock
+exec-once = hypridle
 exec-once = $scripts/start
