hyprland: add binding to switch on main screen

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -10,6 +10,14 @@ bind = $mainMod_SHIFT, F12, dpms, off HDMI-A-1
 bind = $mainMod, F12, dpms, on DP-3
 bind = $mainMod, F12, dpms, on HDMI-A-1
 
+# Switch outputs on main screen.
+# HDM1
+bind = $mainMod, F9, exec, ddcutil setvcp -l "MPG321UX OLED" 60 0x12
+# USB-C
+bind = $mainMod, F10, exec, ddcutil setvcp -l "MPG321UX OLED" 60 0x10
+# Display port
+bind = $mainMod, F11, exec, ddcutil setvcp -l "MPG321UX OLED" 60 0x0f
+
 # Ignore bindings
 bind = $mainMod_L_CONTROL, i, submap, ignore
 submap = ignore
