hyprland: config update for v0.41.1

--- a/hypr/conf.d/global.conf
+++ b/hypr/conf.d/global.conf
@@ -6,8 +6,12 @@ general {
     col.inactive_border = rgba(424242aa)
 
     layout = dwindle
-    no_cursor_warps = yes
+
     no_focus_fallback = yes
+}
+
+cursor {
+    no_warps = yes
 }
 
 dwindle {
