Switch to Inter font
Hack instead of Cousine.
Move to submodule for fonts, with depth=1 to limit the size.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,11 @@
 [submodule "dir_colors/dircolors-solarized"]
 	path = dir_colors/dircolors-solarized
 	url = https://github.com/seebi/dircolors-solarized
+[submodule "fonts/material-design-font"]
+	path = fonts/material-design-font
+	url = https://github.com/Templarian/MaterialDesign-Font
+[submodule "*"]
+	shallow = true
+[submodule "fonts/dotfiles-fonts"]
+	path = fonts/dotfiles-fonts
+	url = https://github.com/aruhier/dotfiles-fonts.git
