--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -6,39 +6,39 @@
     </alias>
     <alias>
         <family>sans-serif</family>
-        <prefer><family>Arimo</family></prefer>
+        <prefer><family>Inter Variable</family></prefer>
     </alias>
     <alias>
         <family>sans</family>
-        <prefer><family>Arimo</family></prefer>
+        <prefer><family>Inter Variable</family></prefer>
     </alias>
     <alias>
         <family>monospace</family>
-        <prefer><family>Cousine</family></prefer>
+        <prefer><family>Hack</family></prefer>
     </alias>
 
     <match>
         <test name="family"><string>Arial</string></test>
         <edit name="family" mode="assign" binding="strong">
-            <string>Arimo</string>
+            <string>Inter Variable</string>
         </edit>
     </match>
     <match>
         <test name="family"><string>Helvetica</string></test>
         <edit name="family" mode="assign" binding="strong">
-            <string>Arimo</string>
+            <string>Inter Variable</string>
         </edit>
     </match>
     <match>
         <test name="family"><string>Verdana</string></test>
         <edit name="family" mode="assign" binding="strong">
-            <string>Arimo</string>
+            <string>Inter Variable</string>
         </edit>
     </match>
     <match>
         <test name="family"><string>Tahoma</string></test>
         <edit name="family" mode="assign" binding="strong">
-            <string>Arimo</string>
+            <string>Inter Variable</string>
         </edit>
     </match>
     <match>
@@ -56,13 +56,13 @@
     <match>
         <test name="family"><string>Consolas</string></test>
         <edit name="family" mode="assign" binding="strong">
-            <string>Cousine</string>
+            <string>Hack</string>
         </edit>
     </match>
     <match>
         <test name="family"><string>Courier New</string></test>
         <edit name="family" mode="assign" binding="strong">
-            <string>Cousine</string>
+            <string>Hack</string>
         </edit>
     </match>
     <match>
