--- a/gtk/gtk3-settings.ini
+++ b/gtk/gtk3-settings.ini
@@ -2,7 +2,7 @@
 gtk-application-prefer-dark-theme=0
 gtk-theme-name=Adwaita
 gtk-icon-theme-name=Numix-Circle
-# gtk-font-name=Arimo 10
+gtk-font-name=Inter Variable, 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
