--- a/gtk/gtk4-settings.ini
+++ b/gtk/gtk4-settings.ini
@@ -2,5 +2,5 @@
 gtk-application-prefer-dark-theme=0
 gtk-theme-name=Adwaita
 gtk-icon-theme-name=Numix-Circle
-gtk-font-name=Cantarell 11
+gtk-font-name=Inter Variable 11
 gtk-cursor-theme-name=Adwaita
