copy: updated config after version bump

--- a/copyq/copyq-commands.ini
+++ b/copyq/copyq-commands.ini
@@ -17,12 +17,11 @@
 3\Input=application/x-copyq-item-pinned
 3\InternalId=copyq_pinned_unpin
 3\Name=Unpin
-4\Command=copyq: plugins.itemtags.tag(decodeURIComponent('Important'))
+4\Command=copyq: (plugins.itemtags.hasTag(decodeURIComponent('Important')) ? plugins.itemtags.untag : plugins.itemtags.tag)(decodeURIComponent('Important'))
 4\Icon=\xf02b
 4\InMenu=true
 4\InternalId=copyq_tags_tag:Important
-4\MatchCommand=copyq: plugins.itemtags.hasTag(decodeURIComponent('Important')) && fail()
-4\Name=Tag as \x201cImportant\x201d
+4\Name=Toggle Tag \x201cImportant\x201d
 5\Command=copyq: plugins.itemtags.untag(decodeURIComponent('Important'))
 5\Icon=\xf02b
 5\InMenu=true
