--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -9,7 +9,7 @@
 # For more info, see: https://weechat.org/doc/weechat/quickstart/
 #
 
-config_version = 2
+config_version = 3
 
 [debug]
 
@@ -34,6 +34,7 @@ buffer_notify_default = message
 buffer_position = end
 buffer_search_case_sensitive = off
 buffer_search_force_default = off
+buffer_search_history = local
 buffer_search_regex = off
 buffer_search_where = prefix_message
 buffer_time_format = "${color:252}%H:${color:245}%M:${color:240}%S"
@@ -51,6 +52,7 @@ color_pairs_auto_reset = 5
 color_real_white = off
 command_chars = ""
 command_incomplete = off
+config_permissions = "600"
 confirm_quit = off
 confirm_upgrade = off
 day_change = on
@@ -60,6 +62,7 @@ eat_newline_glitch = off
 emphasized_attributes = ""
 highlight = ""
 highlight_disable_regex = ""
+highlight_prefix = on
 highlight_regex = ""
 highlight_tags = ""
 hotlist_add_conditions = "${away} || ${buffer.num_displayed} == 0"
@@ -73,7 +76,7 @@ hotlist_names_merged_buffers = off
 hotlist_prefix = "H: "
 hotlist_remove = merged
 hotlist_short_names = on
-hotlist_sort = group_time_asc
+hotlist_sort = "-priority,time,time_usec"
 hotlist_suffix = ""
 hotlist_unique_numbers = on
 hotlist_update_on_buffer_switch = on
@@ -93,7 +96,6 @@ jump_smart_back_to_buffer = on
 key_bind_safe = on
 key_grab_delay = 800
 mouse = off
-mouse_timer_delay = 100
 nick_color_force = ""
 nick_color_hash = djb2
 nick_color_hash_salt = ""
@@ -192,6 +194,7 @@ chat_value = cyan
 chat_value_null = blue
 emphasized = yellow
 emphasized_bg = magenta
+eval_syntax_colors = "green,lightred,lightblue,lightmagenta,yellow,cyan"
 input_actions = lightgreen
 input_text_not_found = red
 item_away = yellow
@@ -207,6 +210,7 @@ status_data_msg = yellow
 status_data_other = default
 status_data_private = lightgreen
 status_filter = green
+status_modes = default
 status_more = yellow
 status_mouse = green
 status_name = white
@@ -218,6 +222,7 @@ status_time = default
 
 [completion]
 base_word_until_cursor = on
+case_sensitive = on
 command_inline = on
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
@@ -705,6 +710,18 @@ ctrl-q = "/input search_stop"
 ctrl-r = "/input search_switch_regex"
 down = "/input search_next"
 e,n,t,e,r = "/input search_stop_here"
+meta-c = "/input search_switch_case"
+return = "/input search_stop_here"
+tab = "/input search_switch_where"
+up = "/input search_previous"
+
+[key_histsearch]
+ctrl-o = "/input history_use_get_next"
+ctrl-q = "/input search_stop"
+ctrl-r = "/input search_previous"
+ctrl-s = "/input search_next"
+ctrl-x = "/input search_switch_regex"
+down = "/input search_next"
 meta-c = "/input search_switch_case"
 return = "/input search_stop_here"
 tab = "/input search_switch_where"
