tmux: add binding to sync session path

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,6 +15,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind C new-window -c "#{pane_current_path}"
+# Change default path of the current session
+bind C-c attach-session -c "#{pane_current_path}"
 
 #### COLOUR (Solarized dark) ####
 
