hyprland: add binding for hyprshot

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -24,6 +24,14 @@ submap = ignore
 bind = $mainMod_L_CONTROL, i, submap, reset
 submap = reset
 
+# Screenshot
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot -m window
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m output
+# Screenshot a region
+bind = $shiftMod, PRINT, exec, hyprshot -m region
+
 # Volume keys
 bindl = , XF86AudioMute, exec, pulsemixer --toggle-mute
 bindl = $mainMod, F1, exec, pulsemixer --toggle-mute
