--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -1,8 +1,10 @@
-# Exit Hyprland
-bind = $mainMod_SHIFT, m, exit,
-
 # Lock
 bind = $mainMod_L_CONTROL_SHIFT, l, exec, loginctl lock-session
+
+# Wlogout
+bind = $mainMod, m, exec, $scripts/wlogout
+# Exit Hyprland
+bind = $mainMod_L_CONTROL_SHIFT, m, exit,
 
 # Ignore bindings
 bind = $mainMod_L_CONTROL, i, submap, ignore
