--- a/firefox/install.conf
+++ b/firefox/install.conf
@@ -1,1 +1,2 @@
 "userChrome.css": "~/.mozilla/firefox/i69gp4vw.default/chrome/userChrome.css"
+"betterfox/user.js": "~/.mozilla/firefox/i69gp4vw.default/user.js"
