hyprland: add rule for thunderbird reminders

--- a/hypr/conf.d/rules.conf
+++ b/hypr/conf.d/rules.conf
@@ -19,3 +19,4 @@ windowrulev2 = float, class:file-roller
 windowrulev2 = float, title:^(Media viewer)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = float,class:^(thunderbird)$,title:^(.*)(Reminder)(.*)$
