hyprland: fix region screenshot binding

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -32,7 +32,7 @@ bind = $mainMod, PRINT, exec, hyprshot -m window
 # Screenshot a monitor
 bind = , PRINT, exec, hyprshot -m output
 # Screenshot a region
-bind = $shiftMod, PRINT, exec, hyprshot -m region
+bind = $mainMod_SHIFT, PRINT, exec, hyprshot -m region
 
 # Volume keys
 bindl = , XF86AudioMute, exec, pulsemixer --toggle-mute
