hyprland: improve the lock/idle process

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,13 +1,11 @@
 general {
-    lock_cmd = ~/.config/hypr/scripts/lock
+    lock_cmd = pidof swaylock || ~/.config/hypr/scripts/lock
     unlock_cmd = pkill swaylock
-    before_sleep_cmd = ~/.config/hypr/scripts/lock
-    after_sleep_cmd = hyprctl dispatcher dpms on
+    before_sleep_cmd = loginctl lock-session
     ignore_dbus_inhibit = false             # whether to ignore dbus-sent idle-inhibit requests (used by e.g. firefox or steam)
 }
 
 listener {
-    timeout = 300                            # in seconds
-    on-timeout = ~/.config/hypr/scripts/lock # command to run when timeout has passed
-    on-resume = hyprctl dispatcher dpms on  # command to run when activity is detected after timeout has fired.
+    timeout = 300
+    on-timeout = loginctl lock-session
 }
