--- a/hypr/conf.d/global.conf
+++ b/hypr/conf.d/global.conf
@@ -19,19 +19,40 @@ dwindle {
 animations {
     enabled = yes
 
-    bezier = overshot, 0.05, 0.9, 0, 1.05
+    # animation = windows, 1, 2, default
+    # animation = windowsOut, 1, 3, smoothOut, slide
+    # animation = windowsMove, 1, 3, default, slide
+    # animation = border, 1, 3, default
+    # animation = layersIn, 0, 3, default, fade
+    # animation = fade, 1, 3, smoothIn
+    # animation = fadeDim, 1, 3, smoothIn
+    # animation = workspaces, 1, 3, default, slide
+    # animation = specialWorkspace, 0, 1, default, slidevert
+
+    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
     bezier = smoothOut, 0.36, 0, 0.66, -0.56
     bezier = smoothIn, 0.25, 1, 0.5, 1
 
-    animation = windows, 1, 2, default
-    animation = windowsOut, 1, 3, smoothOut, slide
+    animation = global, 1, 3, default
+    animation = border, 1, 3, easeOutQuint
+    animation = windows, 1, 2, easeOutQuint
+    animation = windowsIn, 1, 2, easeOutQuint, popin 87%
+    animation = windowsOut, 1, 2, linear, popin 87%
     animation = windowsMove, 1, 3, default, slide
-    animation = border, 1, 3, default
-    animation = layersIn, 0, 3, default, fade
-    animation = fade, 1, 3, smoothIn
-    animation = fadeDim, 1, 3, smoothIn
+    animation = fade, 1, 2, quick
+    animation = fadeIn, 1, 2, almostLinear
+    animation = fadeOut, 1, 2, almostLinear
+    animation = layers, 1, 1, easeOutQuint
+    animation = layersIn, 1, 1, easeOutQuint, fade
+    animation = layersOut, 1, 1, linear, fade
+    animation = fadeLayersIn, 1, 2, almostLinear
+    animation = fadeLayersOut, 1, 2, almostLinear
     animation = workspaces, 1, 3, default, slide
-    animation = specialWorkspace, 0, 1, default, slidevert
+    animation = specialWorkspace, 1, 1, almostLinear, fade
 }
 
 decoration {
