--- a/hypr/conf.d/global.conf
+++ b/hypr/conf.d/global.conf
@@ -74,6 +74,14 @@ misc {
     mouse_move_focuses_monitor = no
 }
 
+
+xwayland {
+    # Pixelated: https://wiki.hyprland.org/Configuring/XWayland/#hidpi-xwayland.
+    force_zero_scaling = true
+}
+# toolkit-specific scale
+env = GDK_SCALE,1.25
+
 render {
     direct_scanout = yes
 }
