--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,6 +1,6 @@
 general {
-    lock_cmd = ~/.config/hypr/scripts/lock
-    unlock_cmd = pkill swaylock
+    lock_cmd = pidof hyprlock || ~/.config/hypr/scripts/lock
+    unlock_cmd = pkill hyprlock
     ignore_dbus_inhibit = false             # whether to ignore dbus-sent idle-inhibit requests (used by e.g. firefox or steam)
 }
 
