--- a/hypr/install.conf
+++ b/hypr/install.conf
@@ -1,4 +1,5 @@
 "hyprland.conf": "~/.config/hypr/hyprland.conf"
+"hyprlock.conf": "~/.config/hypr/hyprlock.conf"
 "hypridle.conf": "~/.config/hypr/hypridle.conf"
 "conf.d": "~/.config/hypr/conf.d"
 "scripts": "~/.config/hypr/scripts"
