hyprland: set resolution for Fallback
Avoid bugs when transitioning to a temporary state where all screens are
off.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,6 +3,7 @@ exec-once = hash dbus-update-activation-environment 2>/dev/null && dbus-update-a
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
+monitor=FALLBACK,1920x1080@60,auto,1
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
