hyprland: tweak lockscreen

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -11,25 +11,27 @@ input-field {
   outline_thickness = 10
   rounding = -1
   monitor =
-  fade_on_empty = false
+  fade_on_empty = true
+  fade_timeout = 3000
   hide_input = true
   placeholder_text =
 }
 
 label {
-    monitor =
-    text = $FPRINTMESSAGE
-    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 25
-    font_family = Noto Sans
-    rotate = 0 # degrees, counter-clockwise
+  monitor =
+  text = $FPRINTMESSAGE
+  text_align = center # center/right or any value for default left. multi-line text alignment inside label container
+  color = rgba(200, 200, 200, 1.0)
+  font_size = 25
+  font_family = Noto Sans
+  rotate = 0 # degrees, counter-clockwise
 
-    position = 0, 80
-    halign = center
-    valign = bottom
+  position = 0, 80
+  halign = center
+  valign = bottom
 }
 
 background {
+  path = ~/.config/hypr/wallpaper-lockscreen
   color = rgb(0, 0, 0)
 }
