--- a/copyq/copyq-commands.ini
+++ b/copyq/copyq-commands.ini
@@ -1,47 +1,46 @@
 [Commands]
 1\Automatic=true
-1\Icon=\xf21b
+1\Icon=
 1\Input=x-kde-passwordManagerHint
 1\Name=KeePassXC protector v3
 1\Remove=true
 2\Command=copyq: plugins.itempinned.pin()
-2\Icon=\xf08d
+2\Icon=
 2\InMenu=true
 2\Input=!OUTPUT
 2\InternalId=copyq_pinned_pin
 2\Name=Pin
 2\Output=application/x-copyq-item-pinned
 3\Command=copyq: plugins.itempinned.unpin()
-3\Icon=\xf08d
+3\Icon=
 3\InMenu=true
 3\Input=application/x-copyq-item-pinned
 3\InternalId=copyq_pinned_unpin
 3\Name=Unpin
-4\Command=copyq: plugins.itemtags.tag(decodeURIComponent('Important'))
-4\Icon=\xf02b
+4\Command=copyq: (plugins.itemtags.hasTag(decodeURIComponent('Important')) ? plugins.itemtags.untag : plugins.itemtags.tag)(decodeURIComponent('Important'))
+4\Icon=
 4\InMenu=true
 4\InternalId=copyq_tags_tag:Important
-4\MatchCommand=copyq: plugins.itemtags.hasTag(decodeURIComponent('Important')) && fail()
-4\Name=Tag as \x201cImportant\x201d
+4\Name=Toggle Tag “Important”
 5\Command=copyq: plugins.itemtags.untag(decodeURIComponent('Important'))
-5\Icon=\xf02b
+5\Icon=
 5\InMenu=true
 5\InternalId=copyq_tags_untag:Important
 5\MatchCommand=copyq: plugins.itemtags.hasTag(decodeURIComponent('Important')) || fail()
-5\Name=Remove tag \x201cImportant\x201d
+5\Name=Remove tag “Important”
 6\Command=copyq: plugins.itemtags.tag()
-6\Icon=\xf02b
+6\Icon=
 6\InMenu=true
 6\InternalId=copyq_tags_tag
 6\Name=Add a Tag
 7\Command=copyq: plugins.itemtags.untag()
-7\Icon=\xf02b
+7\Icon=
 7\InMenu=true
 7\Input=application/x-copyq-tags
 7\InternalId=copyq_tags_untag
 7\Name=Remove a Tag
 8\Command=copyq: plugins.itemtags.clearTags()
-8\Icon=\xf02b
+8\Icon=
 8\InMenu=true
 8\Input=application/x-copyq-tags
 8\InternalId=copyq_tags_clear
