Set screen resolution for lenovo slim 7x

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,7 +4,7 @@ exec-once = hash dbus-update-activation-environment 2>/dev/null && dbus-update-a
 env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,1920x1200@60,0x0,1
+monitor=eDP-1,2944x1840@90.00Hz,auto,1.6
 monitor=,preferred,auto,auto
 monitor=FALLBACK,1920x1080@60,auto,1
 
