Replace light by brightnessctl
More standard and present in Opensuse

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -41,10 +41,10 @@ bindl = , XF86AudioNext, exec, mpc next
 bindl = $mainMod, F6, exec, mpc next
 
 # Brightness
-bindl = , XF86MonBrightnessUp, exec, light -A 10
-bindl = L_SHIFT, XF86MonBrightnessUp, exec, light -A 1
-bindl = , XF86MonBrightnessDown, exec, light -U 10
-bindl = L_SHIFT, XF86MonBrightnessDown, exec, light -U 1
+bindl = , XF86MonBrightnessUp, exec, brightnessctl s '+10%'
+bindl = L_SHIFT, XF86MonBrightnessUp, exec, brightnessctl s '+1%'
+bindl = , XF86MonBrightnessDown, exec, brightnessctl s '10%-'
+bindl = L_SHIFT, XF86MonBrightnessDown, exec, brightnessctl s '1%-'
 
 # Notification (swaync)
 bind = $mainMod, n, exec, swaync-client -t
