hyprland: use firefox in distrobox
Crashes in firefox in Opensuse ARM

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -31,7 +31,7 @@ source=~/.config/hypr/conf.d/scratchpad.conf
 # Start applications
 bind = $mainMod, Return, exec, foot
 bind = $mainMod, r, exec, wofi -S drun --allow-images
-bind = L_ALT, z, exec, firefox-beta
+bind = L_ALT, z, exec, /usr/bin/distrobox-enter -n fedora -- firefox
 bind = L_ALT, x, exec, thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
