--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,6 +7,7 @@ monitor=FALLBACK,1920x1080@60,auto,1
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,Adwaita
 $mainMod = SUPER
 $scripts = ~/.config/hypr/scripts
 
