--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -29,7 +29,7 @@ source=~/.config/hypr/conf.d/scratchpad.conf
 # Start applications
 bind = $mainMod, Return, exec, foot
 bind = $mainMod, r, exec, wofi -S drun --allow-images
-bind = L_ALT, z, exec, firefox
+bind = L_ALT, z, exec, MESA_SHADER_CACHE_DIR=~/.cache/mesa_shader_cache_db firefox
 bind = L_ALT, x, exec, thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
