--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,8 +6,11 @@ monitor=,preferred,auto,auto
 monitor=FALLBACK,1920x1080@60,auto,1
 
 # Some default env vars.
+# Set cursor theme.
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,Adwaita
+env = QT_QPA_PLATFORMTHEME, qt6ct
+
 $mainMod = SUPER
 $scripts = ~/.config/hypr/scripts
 
