Papirus: use https endpoint
Avoid using git@ endpoint for cloning on devices without a github key

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	shallow = true
 [submodule "icons/papirus"]
 	path = icons/papirus
-	url = git@github.com:PapirusDevelopmentTeam/papirus-icon-theme.git
+	url = https://github.com/PapirusDevelopmentTeam/papirus-icon-theme.git
 	branch = master
 	shallow = true
 	ignore = untracked
