--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,9 +1,11 @@
 # sample hyprlock.conf
 # for more configuration options, refer https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock
 
-general {
-  enable_fingerprint = 1
-  fingerprint_ready_message = Scan fingerprint to unlock
+auth {
+  fingerprint {
+    enabled = false
+    ready_message = Scan fingerprint to unlock
+  }
 }
 
 input-field {
