hyprlock: add file extension to wallpaper
Without a .png in the filename, hyprlock doesn't do a proper image
detection and the wallpaper is not applied.

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -34,6 +34,6 @@ label {
 }
 
 background {
-  path = ~/.config/hypr/wallpaper-lockscreen
+  path = ~/.config/hypr/wallpaper-lockscreen.png
   color = rgb(0, 0, 0)
 }
