--- a/hypr/install.conf
+++ b/hypr/install.conf
@@ -4,4 +4,4 @@
 "conf.d": "~/.config/hypr/conf.d"
 "scripts": "~/.config/hypr/scripts"
 "wallpaper": "~/.config/hypr/wallpaper"
-"wallpaper-lockscreen": "~/.config/hypr/wallpaper-lockscreen"
+"wallpaper-lockscreen": "~/.config/hypr/wallpaper-lockscreen.png"
