hyprland: add blur for wlogout

--- a/hypr/conf.d/rules.conf
+++ b/hypr/conf.d/rules.conf
@@ -20,3 +20,5 @@ windowrulev2 = float, title:^(Media viewer)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(thunderbird)$,title:^(.*)(Reminder)(.*)$
+
+layerrule = blur, logout_dialog
