hyprland: no swayosd on Opensuse

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -21,16 +21,16 @@ bind = , PRINT, exec, hyprshot -m output
 bind = $mainMod_SHIFT, PRINT, exec, hyprshot -m region
 
 # Volume keys
-bindl = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
-bindl = $mainMod, F1, exec, swayosd-client --output-volume mute-toggle
-bindl = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume +5
-bindl = $mainMod, F3, exec, swayosd-client --output-volume +5
-bindl = , XF86AudioLowerVolume, exec, swayosd-client --output-volume -5
-bindl = $mainMod, F2, exec, swayosd-client --output-volume -5
-bindl = L_SHIFT, XF86AudioRaiseVolume, exec, swayosd-client --output-volume +1
-bindl = $mainMod_SHIFT, F3, exec, swayosd-client --output-volume +1
-bindl = L_SHIFT, XF86AudioLowerVolume, exec, swayosd-client --output-volume -1
-bindl = $mainMod_SHIFT, F2, exec, swayosd-client --output-volume -1
+bindl = , XF86AudioMute, exec, pulsemixer --toggle-mute
+bindl = $mainMod, F1, exec, pulsemixer --toggle-mute
+bindl = , XF86AudioRaiseVolume, exec, pulsemixer --change-volume +5
+bindl = $mainMod, F3, exec, pulsemixer --change-volume +5
+bindl = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -5
+bindl = $mainMod, F2, exec, pulsemixer --change-volume -5
+bindl = L_SHIFT, XF86AudioRaiseVolume, exec, pulsemixer --change-volume +1
+bindl = $mainMod_SHIFT, F3, exec, pulsemixer --change-volume +1
+bindl = L_SHIFT, XF86AudioLowerVolume, exec, pulsemixer --change-volume -1
+bindl = $mainMod_SHIFT, F2, exec, pulsemixer --change-volume -1
 
 # Media keys
 bindl = , XF86AudioPrev, exec, mpc prev
