hyprland: use firefox native
Firefox native on OpenSuse is not bugged anymore.
Clean up the WLR_DRM_DEVICES too.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,8 +1,6 @@
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
 exec-once = hash dbus-update-activation-environment 2>/dev/null && dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE
 
-env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
-
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,2944x1840@90.00Hz,auto,1.6
 monitor=,preferred,auto,auto
@@ -34,7 +32,7 @@ source=~/.config/hypr/conf.d/scratchpad.conf
 # Start applications
 bind = $mainMod, Return, exec, foot
 bind = $mainMod, r, exec, wofi -S drun --allow-images
-bind = L_ALT, z, exec, /usr/bin/distrobox-enter -n fedora -- firefox
+bind = L_ALT, z, exec, firefox
 bind = L_ALT, x, exec, thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
