--- a/hypr/conf.d/rules.conf
+++ b/hypr/conf.d/rules.conf
@@ -1,24 +1,23 @@
-windowrule = float,org.kde.polkit-kde-authentication-agent-1
-windowrule = float, title:Confirm to replace files
-windowrule = float, file_progress
-windowrule = float, title:File Operation Progress
-windowrule = float, confirm
-windowrule = float, dialog
-windowrule = float, download
-windowrule = float, notification
-windowrule = float, error
-windowrule = float, splash
-windowrule = float, confirmreset
-windowrule = float, title:Open File
-windowrule = float, title:branchdialog
-windowrule = float, viewnior
-windowrule = float, Viewnior
-windowrule = float, pavucontrol-qt
-windowrule = float, pavucontrol
+windowrulev2 = float, class:org.kde.polkit-kde-authentication-agent-1
+windowrulev2 = float, title:Confirm to replace files
+windowrulev2 = float, class:file_progress
+windowrulev2 = float, title:File Operation Progress
+windowrulev2 = float, class:confirm
+windowrulev2 = float, class:dialog
+windowrulev2 = float, class:download
+windowrulev2 = float, class:notification
+windowrulev2 = float, class:error
+windowrulev2 = float, class:splash
+windowrulev2 = float, title:confirmreset
+windowrulev2 = float, title:Open File
+windowrulev2 = float, title:branchdialog
+windowrulev2 = float, title:(V|v)iewnior
+windowrulev2 = float, class:pavucontrol-qt
+windowrulev2 = float, class:pavucontrol
 windowrulev2 = float, class:file-roller
 windowrulev2 = float, title:^(Media viewer)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = float,class:^(thunderbird)$,title:^(.*)(Reminder)(.*)$
+windowrulev2 = float, class:^(thunderbird)$,title:^(.*)(Reminder)(.*)$
 
 layerrule = blur, logout_dialog
